--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../MEDIA/IMAGE/jungle_desktop_wallpaper.png");
+    background-image: url("../MEDIA/IMAGE/desktop_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -12,7 +12,7 @@ body{
     justify-content: space-between;
     width: 100%;
     height: 50px;
-    background-color: rgba(211, 246, 58, 0.373);
+    background-color: rgba(255, 159, 4, 0.373);
 }
 .left{
     display: flex;
@@ -23,25 +23,22 @@ body{
     border: 0px;
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
-    color: pink;
+    color: black;
     margin-right: 20px;
     padding: 0 30px;
 }
 .left button:hover{
-    color: white;
-}
-.left button:nth-child(1):hover{
-    color: black;
+    color: red;
+    font-size: 30px;
 }
 .left button:nth-child(2),button:nth-child(3){
     display: none;
 }
-.left button:nth-child(2):hover, button:nth-child(3):hover{
-    color: salmon;
-}
 #date_time{
-    color: white;
+    color: red;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 15px;
+    font-size: 25px;
     margin: 5px 25px;
+    font-size: 15px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
